fix: show sidebar for single service to avoid layout misalignment

--- a/packages/open-api-page/style.module.css
+++ b/packages/open-api-page/style.module.css
@@ -33,10 +33,4 @@
     width: 0;
     flex-grow: 1;
   }
-
-  &.isSingleService {
-    max-width: 50rem;
-    margin-left: auto;
-    margin-right: auto;
-  }
 }
